syntax = "proto3";

package user;

option go_package = "../generate/user";


service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
}

message GetUserRequest {
  string userID = 1;
}


message GetUserResponse {
  string userName = 1;
}